fix: Update wrong size of marker clusters

--- a/static/civics/sass/base/reset/_4_icons.sass
+++ b/static/civics/sass/base/reset/_4_icons.sass
@@ -25,9 +25,9 @@
 
 .initiative-cluster
   &::before
+    font-size: 60px
     content: "\e812"
     color: #ED61AA
-    font-size: 40px
     +text-shadow(0 0 5px rgba(black, .5))
 
 .fa-map-marker,
@@ -38,13 +38,12 @@
 
 .initiative-cluster .inner
   +border-radius(50%)
-  background-color: rgba(white, .75)
-  width: 9px
-  height: 9px
+  background-color: rgba(white, .5)
+  width: 20px
+  height: 20px
   position: absolute
-  top: 8px
-  left: 9px
-  border: 1px solid rgba(white, .25)
+  top: 10px
+  left: 10px
 
 .initiative-cluster__name,
 .initiative-cluster__count
